--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   test-and-upload:
     docker:
       - image: circleci/golang:1.12
-    working_directory: /src
+    working_directory: /go/src/github.com/mccurdyc/splitfile
     environment:
       - GO111MODULE: on
       - CC_TEST_REPORTER_ID: YOUR_REPO_CC_TEST_REPORTER_ID
