fix GO111MODULE env
Signed-off-by: Colton McCurdy <mccurdyc22@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: circleci/golang:1.12
     working_directory: /go/src/github.com/mccurdyc/splitfile
     environment:
-      - GO111MODULE: on
+      - GO111MODULE=on
       - CC_TEST_REPORTER_ID: YOUR_REPO_CC_TEST_REPORTER_ID
     steps:
       - checkout
