--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,14 @@ jobs:
           name: Collect Test Coverage
           command: |
             go mod download
-            go test -coverprofile c.out ./...
+            go test -race -coverprofile c.out -covermode=atomic ./...
             # have to format coverage to work with Go >1.11 and Modules - https://github.com/codeclimate/test-reporter/issues/363
             ./cc-test-reporter after-build --prefix github.com/mccurdyc/splitfile --coverage-input-type gocov --exit-code $?
-      - run: bash <(curl -s https://codecov.io/bash)
+      - run:
+          name: Upload to Codecov
+          command: |
+            cp c.out coverage.txt
+            bash <(curl -s https://codecov.io/bash)
 
 workflows:
   test:
