trying to fix golangci analysis
Signed-off-by: Colton McCurdy <mccurdyc22@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -42,6 +42,5 @@ run:
 # golangci.com configuration
 # https://github.com/golangci/golangci/wiki/Configuration
 service:
+  project-path: github.com/mccurdyc/splitfile # vanity import path if needed
   golangci-lint-version: 1.17.x # use the fixed version to not introduce new linters unexpectedly
-  prepare:
-    - echo "here I can run custom commands, but no preparation needed for this repo"
