Imported from https://mccurdyc@github.com/mccurdyc/splitfile.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = splitfile makes suggestions for splitting Go packages into multiple files to improve readability.
+[access "refs/*"]
+	owner = group user/Colton J. McCurdy (mccurdyc)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Colton J. McCurdy (mccurdyc)
+	label-Verified = -1..+1 group user/Colton J. McCurdy (mccurdyc)
+	push = group user/Colton J. McCurdy (mccurdyc)
+	read = group user/Colton J. McCurdy (mccurdyc)
+	rebase = group user/Colton J. McCurdy (mccurdyc)
+	removeReviewer = group user/Colton J. McCurdy (mccurdyc)
+	submit = group user/Colton J. McCurdy (mccurdyc)
+[access "refs/heads/*"]
+	create = group user/Colton J. McCurdy (mccurdyc)
+	push = +force group user/Colton J. McCurdy (mccurdyc)
+	pushMerge = group user/Colton J. McCurdy (mccurdyc)
+	read = group user/Colton J. McCurdy (mccurdyc)
+[access "refs/tags/*"]
+	push = group user/Colton J. McCurdy (mccurdyc)
+	push = +force group user/Colton J. McCurdy (mccurdyc)
